--- a/CoffeeMachineCli/views/layout.pug
+++ b/CoffeeMachineCli/views/layout.pug
@@ -3,5 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/main.css')
+    script(type='text/javascript', src='/javascripts/updatedFadeAway.js')
   body
     block content
